i40e: allow user to set LAA again (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15678,6 +15678,7 @@
 	patches.drivers/i40e-0385-i40e-i40evf-remove-reserved-type.patch
 	patches.drivers/i40e-0386-i40e-Add-ablitity-to-enable-disable-link-from-set_li.patch
 	patches.drivers/i40e-0387-i40e-use-WoL-flag-when-setting-LAA.patch
+	patches.drivers/i40e-0388-i40e-allow-user-to-set-LAA-again.patch
 
 	########################################################
 	# Wireless Networking
