--- a/series.conf
+++ b/series.conf
@@ -15334,6 +15334,7 @@
 	patches.drivers/i40e-0041-i40e-remove-unused-including-linux-version.h.patch
 	patches.drivers/i40e-0042-i40e-fix-error-return-code-in-i40e_probe.patch
 	patches.drivers/i40e-0043-i40e-set-pf_id-based-on-device-and-function-numbers.patch
+	patches.drivers/i40e-0044-i40e-register-file-updates.patch
 
 	########################################################
 	# Wireless Networking
