--- a/series.conf
+++ b/series.conf
@@ -15348,6 +15348,7 @@
 	patches.drivers/i40e-0055-i40e-add-support-for-triggering-EMPR.patch
 	patches.drivers/i40e-0056-i40e-restrict-diag-test-length.patch
 	patches.drivers/i40e-0057-i40e-sync-header-files-with-hardware.patch
+	patches.drivers/i40e-0058-i40e-separate-TSYNVALID-and-TSYNINDX-fields-in-Rx-de.patch
 
 	########################################################
 	# Wireless Networking
