i40e/i40evf: update AdminQ API (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15563,6 +15563,7 @@
 	patches.drivers/i40e-0270-i40e-Remove-a-FW-workaround.patch
 	patches.drivers/i40e-0271-i40e-Fix-an-issue-with-displaying-IPv4-FD-filters.patch
 	patches.drivers/i40e-0272-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
+	patches.drivers/i40e-0273-i40e-i40evf-update-AdminQ-API.patch
 
 	########################################################
 	# Wireless Networking
