i40e: complain about out-of-range descriptor request (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15362,6 +15362,7 @@
 	patches.drivers/i40e-0069-i40e-Add-a-new-variable-to-track-number-of-pf-instan.patch
 	patches.drivers/i40e-0070-i40e-restrict-diag-test-messages.patch
 	patches.drivers/i40e-0071-i40e-loopback-info-and-set-loopback-fix.patch
+	patches.drivers/i40e-0072-i40e-complain-about-out-of-range-descriptor-request.patch
 
 	########################################################
 	# Wireless Networking
