i40e: Allow VF to set already assigned MAC address (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15435,6 +15435,7 @@
 	patches.drivers/i40e-0142-i40e-Expose-AQ-debugfs-hooks.patch
 	patches.drivers/i40e-0143-i40e-Do-not-enable-broadcast-promiscuous-by-default.patch
 	patches.drivers/i40e-0144-i40e-Stop-accepting-any-VLAN-tag-on-VLAN-0-filter-se.patch
+	patches.drivers/i40e-0145-i40e-Allow-VF-to-set-already-assigned-MAC-address.patch
 
 	########################################################
 	# Wireless Networking
