i40e: report VF link state correctly (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15570,6 +15570,7 @@
 	patches.drivers/i40e-0277-i40e-rework-fdir-setup-and-teardown.patch
 	patches.drivers/i40e-0278-i40e-Cleanup-if-else-statements.patch
 	patches.drivers/i40e-0279-i40e-Tweak-for-loop-in-i40e_ethtool.c.patch
+	patches.drivers/i40e-0280-i40e-report-VF-link-state-correctly.patch
 
 	########################################################
 	# Wireless Networking
