i40e: fix debugging messages (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15342,6 +15342,7 @@
 	patches.drivers/i40e-0049-i40e-select-reset-counters-correctly.patch
 	patches.drivers/i40e-0050-i40e-retry-call-on-timeout.patch
 	patches.drivers/i40e-0051-i40e-properly-add-VF-MAC-addresses.patch
+	patches.drivers/i40e-0052-i40e-fix-debugging-messages.patch
 
 	########################################################
 	# Wireless Networking
