i40e: remove unnecessary break after goto (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15711,6 +15711,7 @@
 	patches.drivers/i40e-0418-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 	patches.drivers/i40e-0419-i40e-Add-set_pauseparam-to-ethtool.patch
 	patches.drivers/i40e-0420-i40e-Implement-set_settings-for-ethtool.patch
+	patches.drivers/i40e-0421-i40e-remove-unnecessary-break-after-goto.patch
 
 	########################################################
 	# Wireless Networking
