i40e: fix a stray print message (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15673,6 +15673,7 @@
 	patches.drivers/i40e-0380-i40e-make-prep_for_reset-void.patch
 	patches.drivers/i40e-0381-i40e-Add-PF-reset-when-Malicious-driver-event-for-PF.patch
 	patches.drivers/i40e-0382-i40e-warn-on-newer-older-firmware-API-rev.patch
+	patches.drivers/i40e-0383-i40e-fix-a-stray-print-message.patch
 
 	########################################################
 	# Wireless Networking
