--- a/series.conf
+++ b/series.conf
@@ -15471,6 +15471,7 @@
 	patches.drivers/i40e-0178-i40e-check-for-possible-incorrect-ipv6-checksum.patch
 	patches.drivers/i40e-0179-i40e-adjust-ITR-max-and-min-values.patch
 	patches.drivers/i40e-0180-i40e-clear-qtx_head-before-enabling-Tx-queue.patch
+	patches.drivers/i40e-0181-i40e-call-clear_pxe-after-adminq-is-initialized.patch
 
 	########################################################
 	# Wireless Networking
