i40e: Implementation of VXLAN ndo's (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15391,6 +15391,7 @@
 	patches.drivers/i40e-0098-i40e-Populate-and-check-pci-bus-speed-and-width.patch
 	patches.drivers/i40e-0099-i40e-add-wake-on-lan-support.patch
 	patches.drivers/i40e-0100-i40e-fix-curly-brace-use-and-return-type.patch
+	patches.drivers/i40e-0101-i40e-Implementation-of-VXLAN-ndo-s.patch
 
 	########################################################
 	# Wireless Networking
