--- a/series.conf
+++ b/series.conf
@@ -15481,6 +15481,7 @@
 	patches.drivers/i40e-0188-i40e-whitespace-fixes.patch
 	patches.drivers/i40e-0189-i40e-Warn-admin-to-reload-VF-driver-on-port-VLAN-con.patch
 	patches.drivers/i40e-0190-i40e-Retain-MAC-filters-on-port-VLAN-deletion.patch
+	patches.drivers/i40e-0191-drivers-net-delete-non-required-instances-of-include.patch
 
 	########################################################
 	# Wireless Networking
