i40e: support VFs on PFs other than 0 (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15425,6 +15425,7 @@
 	patches.drivers/i40e-0132-i40e-use-struct-assign-instead-of-memcpy.patch
 	patches.drivers/i40e-0133-i40e-don-t-allocate-zero-size.patch
 	patches.drivers/i40e-0134-i40e-acknowledge-VFLR-when-disabling-SR-IOV.patch
+	patches.drivers/i40e-0135-i40e-support-VFs-on-PFs-other-than-0.patch
 
 	########################################################
 	# Wireless Networking
