i40e: be more informative (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15399,6 +15399,7 @@
 	patches.drivers/i40e-0106-i40e-remove-redundant-code.patch
 	patches.drivers/i40e-0107-i40e-remove-chatty-log-messages.patch
 	patches.drivers/i40e-0108-i40e-fix-error-return.patch
+	patches.drivers/i40e-0109-i40e-be-more-informative.patch
 
 	########################################################
 	# Wireless Networking
