--- a/series.conf
+++ b/series.conf
@@ -15336,6 +15336,7 @@
 	patches.drivers/i40e-0043-i40e-set-pf_id-based-on-device-and-function-numbers.patch
 	patches.drivers/i40e-0044-i40e-register-file-updates.patch
 	patches.drivers/i40e-0045-i40e-clear-AQ-head-and-tail-registers.patch
+	patches.drivers/i40e-0046-i40e-simplify-aq-head-tail-len-setups.patch
 
 	########################################################
 	# Wireless Networking
