--- a/series.conf
+++ b/series.conf
@@ -15410,6 +15410,7 @@
 	patches.drivers/i40e-0117-i40e-guard-against-vf-message-races.patch
 	patches.drivers/i40e-0118-i40e-add-header-file-flag-_I40E_TXRX_H_.patch
 	patches.drivers/i40e-0119-i40e-use-functions-to-enable-and-disable-icr-0.patch
+	patches.drivers/i40e-0120-i40e-reinit-buffer-size-each-time.patch
 
 	########################################################
 	# Wireless Networking
