--- a/series.conf
+++ b/series.conf
@@ -15386,6 +15386,7 @@
 	patches.drivers/i40e-0093-i40e-Fix-off-by-one-in-i40e_dbg_command_write.patch
 	patches.drivers/i40e-0094-i40e-make-functions-static-and-remove-dead-code.patch
 	patches.drivers/i40e-0095-i40e-using-for_each_set_bit-to-simplify-the-code.patch
+	patches.drivers/i40e-0096-i40e-Suppress-HMC-error-to-Interrupt-message-level.patch
 
 	########################################################
 	# Wireless Networking
