--- a/series.conf
+++ b/series.conf
@@ -15554,6 +15554,7 @@
 	patches.drivers/i40e-0261-i40e-Remove-casts-of-pointer-to-same-type.patch
 	patches.drivers/i40e-0262-i40e-remove-open-coded-skb_cow_head.patch
 	patches.drivers/i40e-0263-i40e-fix-TCP-flag-replication-for-hardware-offload.patch
+	patches.drivers/i40e-0264-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 
 	########################################################
 	# Wireless Networking
