i40e: Fix ring allocation (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15414,6 +15414,7 @@
 	patches.drivers/i40e-0121-i40e-fix-error-handling-when-alloc-of-vsi-array-fail.patch
 	patches.drivers/i40e-0122-i40e-keep-allocated-memory-in-structs.patch
 	patches.drivers/i40e-0123-i40e-catch-unset-q_vector.patch
+	patches.drivers/i40e-0124-i40e-Fix-ring-allocation.patch
 
 	########################################################
 	# Wireless Networking
