i40e: cleanup strings (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15519,6 +15519,7 @@
 	patches.drivers/i40e-0226-i40e-Fix-a-bug-in-the-update-logic-for-FDIR-SB-filte.patch
 	patches.drivers/i40e-0227-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 	patches.drivers/i40e-0228-i40e-make-string-references-to-q-be-queue.patch
+	patches.drivers/i40e-0229-i40e-cleanup-strings.patch
 
 	########################################################
 	# Wireless Networking
