i40e: assign correct vector to VF (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15320,6 +15320,7 @@
 	patches.drivers/i40e-0027-i40e-Add-support-for-64-bit-netstats.patch
 	patches.drivers/i40e-0028-i40e-do-not-flush-after-re-enabling-interrupts.patch
 	patches.drivers/i40e-0029-i40e-don-t-free-nonexistent-rings.patch
+	patches.drivers/i40e-0030-i40e-assign-correct-vector-to-VF.patch
 
 	########################################################
 	# Wireless Networking
