net: add ndo to get id of physical port of the device (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15712,6 +15712,7 @@
 	patches.drivers/i40e-0419-i40e-Add-set_pauseparam-to-ethtool.patch
 	patches.drivers/i40e-0420-i40e-Implement-set_settings-for-ethtool.patch
 	patches.drivers/i40e-0421-i40e-remove-unnecessary-break-after-goto.patch
+	patches.fixes/net-add-ndo-to-get-id-of-physical-port-of-the-device.patch
 
 	########################################################
 	# Wireless Networking
