i40e/i40evf: AdminQ API update for new FW (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15649,6 +15649,7 @@
 	patches.drivers/i40e-0356-i40e-Delete-stale-MAC-filters-after-change.patch
 	patches.drivers/i40e-0357-i40e-Allow-RSS-table-entry-range-and-GPS-to-be-any-n.patch
 	patches.drivers/i40e-0358-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
+	patches.drivers/i40e-0359-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 
 	########################################################
 	# Wireless Networking
