i40e: fix panic due to too-early Tx queue enable (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15760,6 +15760,7 @@
 	patches.drivers/i40e-0467-i40e-Tell-OS-link-is-going-down-when-calling-set_phy.patch
 	patches.drivers/i40e-0468-i40e-make-warning-less-verbose.patch
 	patches.drivers/i40e-0469-i40e-Fix-an-issue-when-PF-reset-fails.patch
+	patches.drivers/i40e-0470-i40e-fix-panic-due-to-too-early-Tx-queue-enable.patch
 
 	########################################################
 	# Wireless Networking
