--- a/series.conf
+++ b/series.conf
@@ -15447,6 +15447,7 @@
 	patches.drivers/i40e-0154-i40e-remove-redundant-AQ-enable.patch
 	patches.drivers/i40e-0155-i40e-correctly-setup-ARQ-descriptors.patch
 	patches.drivers/i40e-0156-i40e-Re-enable-interrupt-on-ICR0.patch
+	patches.drivers/i40e-0157-i40e-use-kernel-specific-defines.patch
 
 	########################################################
 	# Wireless Networking
