--- a/series.conf
+++ b/series.conf
@@ -15686,6 +15686,7 @@
 	patches.drivers/i40e-0393-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
 	patches.drivers/i40e-0394-i40e-rename-i40e_ptp_enable-to-i40e_ptp_feature_enab.patch
 	patches.drivers/i40e-0395-i40e-break-PTP-hardware-control-from-ioctl-command-f.patch
+	patches.drivers/i40e-0396-i40e-don-t-store-user-requested-mode-until-we-ve-val.patch
 
 	########################################################
 	# Wireless Networking
