i40e: Add code to wait for FW to complete in reset path (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15436,6 +15436,7 @@
 	patches.drivers/i40e-0143-i40e-Do-not-enable-broadcast-promiscuous-by-default.patch
 	patches.drivers/i40e-0144-i40e-Stop-accepting-any-VLAN-tag-on-VLAN-0-filter-se.patch
 	patches.drivers/i40e-0145-i40e-Allow-VF-to-set-already-assigned-MAC-address.patch
+	patches.drivers/i40e-0146-i40e-Add-code-to-wait-for-FW-to-complete-in-reset-pa.patch
 
 	########################################################
 	# Wireless Networking
