--- a/series.conf
+++ b/series.conf
@@ -15459,6 +15459,7 @@
 	patches.drivers/i40e-0166-i40e-shorten-wordy-fields.patch
 	patches.drivers/i40e-0167-i40e-trivial-formatting-and-checkpatch-fixes.patch
 	patches.drivers/i40e-0168-i40e-Add-a-dummy-packet-template.patch
+	patches.drivers/i40e-0169-i40e-Turn-flow-director-off-in-MFP-mode.patch
 
 	########################################################
 	# Wireless Networking
