i40e/i40evf: ARQ copy desc data even for failed commands (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15721,6 +15721,7 @@
 	patches.drivers/i40e-0428-i40e-fix-format-mismatch-in-drivers-net-ethernet-int.patch
 	patches.drivers/i40e-0429-i40e-i40evf-Add-nvmupdate-support.patch
 	patches.drivers/i40e-0430-i40e-i40evf-fix-extension-header-csum-logic.patch
+	patches.drivers/i40e-0431-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
 
 	########################################################
 	# Wireless Networking
