--- a/series.conf
+++ b/series.conf
@@ -15325,6 +15325,7 @@
 	patches.drivers/i40e-0032-i40e-debugfs-fixups.patch
 	patches.drivers/i40e-0033-i40e-clamp-debugfs-nvm-read-command.patch
 	patches.drivers/i40e-0034-i40e-fix-use-of-untrusted-scalar-value-warning.patch
+	patches.drivers/i40e-0035-i40e-fix-sign-extension-issue.patch
 
 	########################################################
 	# Wireless Networking
