--- a/series.conf
+++ b/series.conf
@@ -15536,6 +15536,7 @@
 	patches.drivers/i40e-0243-i40e-Patch-to-enable-Ethtool-netdev-feature-flag-for.patch
 	patches.drivers/i40e-0244-i40e-Refactor-and-cleanup-i40e_open-adding-i40e_vsi_.patch
 	patches.drivers/i40e-0245-i40e-i40evf-enable-hardware-feature-head-write-back.patch
+	patches.drivers/i40e-0246-i40e-i40evf-reduce-context-descriptors.patch
 
 	########################################################
 	# Wireless Networking
