i40e: Make the alloc and free queue vector calls orthogonal (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15541,6 +15541,7 @@
 	patches.drivers/i40e-0248-i40e-i40evf-Add-EEE-LPI-stats.patch
 	patches.drivers/i40e-0249-i40e-Fix-a-message-string.patch
 	patches.drivers/i40e-0250-i40e-Delete-ATR-filter-on-RST.patch
+	patches.drivers/i40e-0251-i40e-Make-the-alloc-and-free-queue-vector-calls-orth.patch
 
 	########################################################
 	# Wireless Networking
