i40e: use generic vsi_open to unquiesce vsi (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15566,6 +15566,7 @@
 	patches.drivers/i40e-0273-i40e-i40evf-update-AdminQ-API.patch
 	patches.drivers/i40e-0274-i40e-prep-vsi_open-logic-for-non-netdev-cases.patch
 	patches.drivers/i40e-0275-i40e-abstract-the-close-path-for-better-netdev-vsis.patch
+	patches.drivers/i40e-0276-i40e-use-generic-vsi_open-to-unquiesce-vsi.patch
 
 	########################################################
 	# Wireless Networking
