--- a/series.conf
+++ b/series.conf
@@ -15501,6 +15501,7 @@
 	patches.drivers/i40e-0208-i40e-reset-VFs-after-PF-reset.patch
 	patches.drivers/i40e-0209-i40e-enable-extant-VFs.patch
 	patches.drivers/i40e-0210-i40e-don-t-handle-VF-reset-on-unload.patch
+	patches.drivers/i40e-0211-i40e-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 
 	########################################################
 	# Wireless Networking
