--- a/series.conf
+++ b/series.conf
@@ -15698,6 +15698,7 @@
 	patches.drivers/i40e-0405-i40e-Correct-mask-assignment-value.patch
 	patches.drivers/i40e-0406-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
 	patches.drivers/i40e-0407-i40e-FD-filter-replay-logic-bug-fix.patch
+	patches.drivers/i40e-0408-i40e-i40evf-initialize-context-descriptor.patch
 
 	########################################################
 	# Wireless Networking
