--- a/series.conf
+++ b/series.conf
@@ -15743,6 +15743,7 @@
 	patches.drivers/i40e-0450-i40e-fix-PTP-bug.patch
 	patches.drivers/i40e-0451-i40e-Fix-TSO-and-hw-checksums-for-non-accelerated-vl.patch
 	patches.drivers/i40e-0452-i40e-Update-flow-director-error-messages-to-reduce-u.patch
+	patches.drivers/i40e-0453-i40e-Some-FD-message-fixes.patch
 
 	########################################################
 	# Wireless Networking
