--- a/series.conf
+++ b/series.conf
@@ -15409,6 +15409,7 @@
 	patches.drivers/i40e-0116-i40e-fix-constant-cast-issues.patch
 	patches.drivers/i40e-0117-i40e-guard-against-vf-message-races.patch
 	patches.drivers/i40e-0118-i40e-add-header-file-flag-_I40E_TXRX_H_.patch
+	patches.drivers/i40e-0119-i40e-use-functions-to-enable-and-disable-icr-0.patch
 
 	########################################################
 	# Wireless Networking
