i40e: Change firmware workaround (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15485,6 +15485,7 @@
 	patches.drivers/i40e-0192-i40e-check-desc-pointer-before-printing.patch
 	patches.drivers/i40e-0193-i40e-updates-to-AdminQ-interface.patch
 	patches.drivers/i40e-0194-i40e-fix-compile-warning-on-checksum_local.patch
+	patches.drivers/i40e-0195-i40e-Change-firmware-workaround.patch
 
 	########################################################
 	# Wireless Networking
