--- a/series.conf
+++ b/series.conf
@@ -15759,6 +15759,7 @@
 	patches.drivers/i40e-0466-i40e-Remove-unnecessary-assignment.patch
 	patches.drivers/i40e-0467-i40e-Tell-OS-link-is-going-down-when-calling-set_phy.patch
 	patches.drivers/i40e-0468-i40e-make-warning-less-verbose.patch
+	patches.drivers/i40e-0469-i40e-Fix-an-issue-when-PF-reset-fails.patch
 
 	########################################################
 	# Wireless Networking
