--- a/series.conf
+++ b/series.conf
@@ -15550,6 +15550,7 @@
 	patches.drivers/i40e-0257-i40e-Use-DEBUG_FD-message-level-for-an-FD-message.patch
 	patches.drivers/i40e-0258-i40e-fix-function-kernel-doc-description.patch
 	patches.drivers/i40e-0259-i40e-i40evf-fix-error-checking-path.patch
+	patches.drivers/i40e-0260-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 
 	########################################################
 	# Wireless Networking
