i40e: add DCB and DCBNL support (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15490,6 +15490,7 @@
 	patches.drivers/i40e-0197-i40e-rename-defines.patch
 	patches.drivers/i40e-0198-i40e-refactor-flow-director.patch
 	patches.drivers/i40e-0199-i40e-implement-DCB-support-infastructure.patch
+	patches.drivers/i40e-0200-i40e-add-DCB-and-DCBNL-support.patch
 
 	########################################################
 	# Wireless Networking
