i40e: Fix device ID define names to align to standard (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15492,6 +15492,7 @@
 	patches.drivers/i40e-0199-i40e-implement-DCB-support-infastructure.patch
 	patches.drivers/i40e-0200-i40e-add-DCB-and-DCBNL-support.patch
 	patches.drivers/i40e-0201-i40e-add-DCB-option-to-Kconfig.patch
+	patches.drivers/i40e-0202-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
 
 	########################################################
 	# Wireless Networking
