i40e: fix fdir programming (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15691,6 +15691,7 @@
 	patches.drivers/i40e-0398-i40e-Avoid-adding-the-TCP-IPv4-filter-twice.patch
 	patches.drivers/i40e-0399-i40e-Fix-the-FD-sideband-logic-to-detect-a-FD-table-.patch
 	patches.drivers/i40e-0400-i40e-Add-debugfs-hooks-to-print-current-total-FD-fil.patch
+	patches.drivers/i40e-0401-i40e-fix-fdir-programming.patch
 
 	########################################################
 	# Wireless Networking
