--- a/series.conf
+++ b/series.conf
@@ -15640,6 +15640,7 @@
 	patches.drivers/i40e-0347-i40e-add-checks-for-AQ-error-status-bits.patch
 	patches.drivers/i40e-0348-i40e-allow-for-more-VSIs.patch
 	patches.drivers/i40e-0349-i40e-remove-unused-variable-and-memory-allocation.patch
+	patches.drivers/i40e-0350-i40e-don-t-complain-about-removing-non-existent-addr.patch
 
 	########################################################
 	# Wireless Networking
