i40e: Define a new state variable to keep track of feature auto disable (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15522,6 +15522,7 @@
 	patches.drivers/i40e-0229-i40e-cleanup-strings.patch
 	patches.drivers/i40e-0230-i40e-simplified-init-string.patch
 	patches.drivers/i40e-0231-i40e-Fix-function-comments.patch
+	patches.drivers/i40e-0232-i40e-Define-a-new-state-variable-to-keep-track-of-fe.patch
 
 	########################################################
 	# Wireless Networking
