i40e/i40evf: fix rx descriptor status (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15627,6 +15627,7 @@
 	patches.drivers/i40e-0334-i40e-print-full-link-message.patch
 	patches.drivers/i40e-0335-i40e-don-t-remove-HMC-that-doesn-t-exist.patch
 	patches.drivers/i40e-0336-i40e-remove-irqs-only-when-they-are-set-up.patch
+	patches.drivers/i40e-0337-i40e-i40evf-fix-rx-descriptor-status.patch
 
 	########################################################
 	# Wireless Networking
