i40e: fix curly brace use and return type (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15390,6 +15390,7 @@
 	patches.fixes/pci_regs.h-Add-PCI-bus-link-speed-and-width-defines.patch
 	patches.drivers/i40e-0098-i40e-Populate-and-check-pci-bus-speed-and-width.patch
 	patches.drivers/i40e-0099-i40e-add-wake-on-lan-support.patch
+	patches.drivers/i40e-0100-i40e-fix-curly-brace-use-and-return-type.patch
 
 	########################################################
 	# Wireless Networking
