i40e: Retain MAC filters when changing port VLAN (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15573,6 +15573,7 @@
 	patches.drivers/i40e-0280-i40e-report-VF-link-state-correctly.patch
 	patches.drivers/i40e-0281-i40e-fix-Timesync-Tx-interrupt-handler-code.patch
 	patches.drivers/i40e-0282-i40e-remove-ptp_tx_work-timestamp-work-item.patch
+	patches.drivers/i40e-0283-i40e-Retain-MAC-filters-when-changing-port-VLAN.patch
 
 	########################################################
 	# Wireless Networking
