i40e: don't allocate zero size (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15423,6 +15423,7 @@
 	patches.drivers/i40e-0130-i40e-avoid-unnecessary-register-read.patch
 	patches.drivers/i40e-0131-i40e-Do-not-enable-default-port-on-the-VEB.patch
 	patches.drivers/i40e-0132-i40e-use-struct-assign-instead-of-memcpy.patch
+	patches.drivers/i40e-0133-i40e-don-t-allocate-zero-size.patch
 
 	########################################################
 	# Wireless Networking
