--- a/series.conf
+++ b/series.conf
@@ -15323,6 +15323,7 @@
 	patches.drivers/i40e-0030-i40e-assign-correct-vector-to-VF.patch
 	patches.drivers/i40e-0031-i40e-fixup-legacy-interrupt-handling.patch
 	patches.drivers/i40e-0032-i40e-debugfs-fixups.patch
+	patches.drivers/i40e-0033-i40e-clamp-debugfs-nvm-read-command.patch
 
 	########################################################
 	# Wireless Networking
