--- a/series.conf
+++ b/series.conf
@@ -15702,6 +15702,7 @@
 	patches.drivers/i40e-0409-i40e-limit-GLLAN_TXPRE_QDIS-to-QINDX-0-127.patch
 	patches.drivers/i40e-0410-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
 	patches.drivers/i40e-0411-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
+	patches.drivers/i40e-0412-i40e-tolerate-lost-interrupts.patch
 
 	########################################################
 	# Wireless Networking
