i40e: restrict diag test messages (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15360,6 +15360,7 @@
 	patches.drivers/i40e-0067-i40e-refactor-ethtool-tests.patch
 	patches.drivers/i40e-0068-i40e-add-num_VFs-message.patch
 	patches.drivers/i40e-0069-i40e-Add-a-new-variable-to-track-number-of-pf-instan.patch
+	patches.drivers/i40e-0070-i40e-restrict-diag-test-messages.patch
 
 	########################################################
 	# Wireless Networking
