--- a/series.conf
+++ b/series.conf
@@ -15670,6 +15670,7 @@
 	patches.drivers/i40e-0377-i40e-i40evf-Update-RSS-configuration.patch
 	patches.drivers/i40e-0378-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
 	patches.drivers/i40e-0379-i40e-Stop-the-VF-device-after-setting-its-MAC-addres.patch
+	patches.drivers/i40e-0380-i40e-make-prep_for_reset-void.patch
 
 	########################################################
 	# Wireless Networking
