i40e/i40evf: Add an FD message level (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15546,6 +15546,7 @@
 	patches.drivers/i40e-0253-i40e-Cleanup-in-FDIR-SB-ethtool-code.patch
 	patches.drivers/i40e-0254-i40e-Add-functionality-for-FD-SB-to-drop-packets.patch
 	patches.drivers/i40e-0255-i40e-check-for-netdev-before-debugfs-use.patch
+	patches.drivers/i40e-0256-i40e-i40evf-Add-an-FD-message-level.patch
 
 	########################################################
 	# Wireless Networking
