--- a/series.conf
+++ b/series.conf
@@ -15718,6 +15718,7 @@
 	patches.drivers/i40e-0425-i40e-fix-race-conditions-on-queuing-skb-for-HW-time-.patch
 	patches.drivers/i40e-0426-i40e-i40evf-Clean-up-code.patch
 	patches.drivers/i40e-0427-i40e-ptp-warn-when-PF_ID-does-not-match-in-PRTTSYN_C.patch
+	patches.drivers/i40e-0428-i40e-fix-format-mismatch-in-drivers-net-ethernet-int.patch
 
 	########################################################
 	# Wireless Networking
