i40e: Fix MAC format in Write MAC address AQ cmd (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15449,6 +15449,7 @@
 	patches.drivers/i40e-0156-i40e-Re-enable-interrupt-on-ICR0.patch
 	patches.drivers/i40e-0157-i40e-use-kernel-specific-defines.patch
 	patches.drivers/i40e-0158-i40e-Fix-GPL-header.patch
+	patches.drivers/i40e-0159-i40e-Fix-MAC-format-in-Write-MAC-address-AQ-cmd.patch
 
 	########################################################
 	# Wireless Networking
