i40e/i40evf: add Tx pre queue disable function (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15620,6 +15620,7 @@
 	patches.drivers/i40e-0327-i40e-add-VEB-stats-to-ethtool.patch
 	patches.drivers/i40e-0328-i40e-print-message-for-pre-production-hardware.patch
 	patches.drivers/i40e-0329-i40e-i40evf-check-AQ-register-for-valid-data.patch
+	patches.drivers/i40e-0330-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
 
 	########################################################
 	# Wireless Networking
