i40e: check for possible incorrect ipv6 checksum (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15468,6 +15468,7 @@
 	patches.drivers/i40e-0175-i40e-Setting-queue-count-to-1-using-ethtool-is-valid.patch
 	patches.drivers/i40e-0176-i40e-do-not-bail-when-disabling-if-Tx-queue-disable-.patch
 	patches.drivers/i40e-0177-i40e-allow-VF-to-remove-any-MAC-filter.patch
+	patches.drivers/i40e-0178-i40e-check-for-possible-incorrect-ipv6-checksum.patch
 
 	########################################################
 	# Wireless Networking
