i40e: properly add VF MAC addresses (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15341,6 +15341,7 @@
 	patches.drivers/i40e-0048-i40e-allow-one-more-vector-for-VFs.patch
 	patches.drivers/i40e-0049-i40e-select-reset-counters-correctly.patch
 	patches.drivers/i40e-0050-i40e-retry-call-on-timeout.patch
+	patches.drivers/i40e-0051-i40e-properly-add-VF-MAC-addresses.patch
 
 	########################################################
 	# Wireless Networking
