i40e: check multi-bit state correctly (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15349,6 +15349,7 @@
 	patches.drivers/i40e-0056-i40e-restrict-diag-test-length.patch
 	patches.drivers/i40e-0057-i40e-sync-header-files-with-hardware.patch
 	patches.drivers/i40e-0058-i40e-separate-TSYNVALID-and-TSYNINDX-fields-in-Rx-de.patch
+	patches.drivers/i40e-0059-i40e-check-multi-bit-state-correctly.patch
 
 	########################################################
 	# Wireless Networking
