i40e: Add dual speed module support (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15753,6 +15753,7 @@
 	patches.drivers/i40e-0460-i40e-quiet-complaints-when-removing-default-MAC-VLAN.patch
 	patches.drivers/i40e-0461-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 	patches.drivers/i40e-0462-i40e-i40evf-Bump-i40e-i40evf-version.patch
+	patches.drivers/i40e-0463-i40e-Add-dual-speed-module-support.patch
 
 	########################################################
 	# Wireless Networking
