--- a/series.conf
+++ b/series.conf
@@ -15401,6 +15401,7 @@
 	patches.drivers/i40e-0108-i40e-fix-error-return.patch
 	patches.drivers/i40e-0109-i40e-be-more-informative.patch
 	patches.drivers/i40e-0110-i40e-make-a-define-from-a-large-constant.patch
+	patches.drivers/i40e-0111-i40e-update-led-set-args.patch
 
 	########################################################
 	# Wireless Networking
