i40e: _MASK vs _SHIFT typo in i40e_handle_mdd_event() (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15764,6 +15764,7 @@
 	patches.drivers/i40e-0471-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 	patches.drivers/i40e-0472-i40e-use-global-pci_vfs_assigned-to-replace-local-i4.patch
 	patches.drivers/i40e-0473-i40e-igb-Convert-to-dev_consume_skb_any.patch
+	patches.drivers/i40e-0474-i40e-_MASK-vs-_SHIFT-typo-in-i40e_handle_mdd_event.patch
 
 	########################################################
 	# Wireless Networking
