i40e: Remove FCoE in i40e_virtchnl_pf.c code (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15376,6 +15376,7 @@
 	patches.drivers/i40e-0083-i40e-Add-basic-support-for-get-set-channels-for-RSS.patch
 	patches.drivers/i40e-0084-i40e-rtnl_lock-in-reset-path-fixes.patch
 	patches.drivers/i40e-0085-i40e-support-for-suspend-and-resume.patch
+	patches.drivers/i40e-0086-i40e-Remove-FCoE-in-i40e_virtchnl_pf.c-code.patch
 
 	########################################################
 	# Wireless Networking
