i40e/i40evf: Remove reserved PCTYPE defines (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15596,6 +15596,7 @@
 	patches.drivers/i40e-0303-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 	patches.drivers/i40e-0304-i40e-enable-descriptor-prefetch-for-VFs.patch
 	patches.drivers/i40e-0305-i40e-Tx-Rx-rings-declaration.patch
+	patches.drivers/i40e-0306-i40e-i40evf-Remove-reserved-PCTYPE-defines.patch
 
 	########################################################
 	# Wireless Networking
