--- a/series.conf
+++ b/series.conf
@@ -15343,6 +15343,7 @@
 	patches.drivers/i40e-0050-i40e-retry-call-on-timeout.patch
 	patches.drivers/i40e-0051-i40e-properly-add-VF-MAC-addresses.patch
 	patches.drivers/i40e-0052-i40e-fix-debugging-messages.patch
+	patches.drivers/i40e-0053-i40e-default-debug-mask-setting.patch
 
 	########################################################
 	# Wireless Networking
