--- a/series.conf
+++ b/series.conf
@@ -15750,6 +15750,7 @@
 	patches.drivers/i40e-0457-i40e-set-num_queue_pairs-to-num-configured-by-VF.patch
 	patches.drivers/i40e-0458-i40e-Add-checks-and-message-for-Qualified-Module-inf.patch
 	patches.drivers/i40e-0459-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
+	patches.drivers/i40e-0460-i40e-quiet-complaints-when-removing-default-MAC-VLAN.patch
 
 	########################################################
 	# Wireless Networking
