i40e: Replace ring container array with linked list (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15315,6 +15315,7 @@
 	patches.drivers/i40e-0022-i40e-Add-support-for-Tx-byte-queue-limits.patch
 	patches.drivers/i40e-0023-i40e-Split-bytes-and-packets-from-Rx-Tx-stats.patch
 	patches.drivers/i40e-0024-i40e-Move-q_vectors-from-pointer-to-array-to-array-o.patch
+	patches.drivers/i40e-0025-i40e-Replace-ring-container-array-with-linked-list.patch
 
 	########################################################
 	# Wireless Networking
