--- a/series.conf
+++ b/series.conf
@@ -15396,6 +15396,7 @@
 	patches.drivers/i40e-0103-i40e-Rx-checksum-offload-for-VXLAN.patch
 	patches.drivers/i40e-0104-i40e-move-i40e_reset_vf.patch
 	patches.drivers/i40e-0105-i40e-refactor-VF-reset-flow.patch
+	patches.drivers/i40e-0106-i40e-remove-redundant-code.patch
 
 	########################################################
 	# Wireless Networking
