i40e: Add missing braces to i40e_dcb_need_reconfig() (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15493,6 +15493,7 @@
 	patches.drivers/i40e-0200-i40e-add-DCB-and-DCBNL-support.patch
 	patches.drivers/i40e-0201-i40e-add-DCB-option-to-Kconfig.patch
 	patches.drivers/i40e-0202-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
+	patches.drivers/i40e-0203-i40e-Add-missing-braces-to-i40e_dcb_need_reconfig.patch
 
 	########################################################
 	# Wireless Networking
