net: Replace u64_stats_fetch_begin_bh to u64_stats_fetch_begin_irq (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15528,6 +15528,7 @@
 	patches.drivers/i40e-0235-i40e-Let-MDD-events-be-handled-by-MDD-handler.patch
 	patches.drivers/i40e-0236-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
 	patches.drivers/i40e-0237-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
+	patches.drivers/i40e-0238-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 
 	########################################################
 	# Wireless Networking
