i40e/i40evf: Retrieve and store missing link config information (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15582,6 +15582,7 @@
 	patches.drivers/i40e-0289-i40e-Do-not-enable-NTUPLE-feature-control-in-MFP-mod.patch
 	patches.drivers/i40e-0290-i40e-Do-not-expose-fd-sb-commands-from-debugfs.patch
 	patches.drivers/i40e-0291-i40e-Update-function-formal-parameters.patch
+	patches.drivers/i40e-0292-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 
 	########################################################
 	# Wireless Networking
