i40e: rtnl_lock in reset path fixes (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15374,6 +15374,7 @@
 	patches.drivers/i40e-0081-i40e-reinit-flow-for-the-main-VSI.patch
 	patches.drivers/i40e-0082-i40e-function-to-reconfigure-RSS-queues-and-rebuild.patch
 	patches.drivers/i40e-0083-i40e-Add-basic-support-for-get-set-channels-for-RSS.patch
+	patches.drivers/i40e-0084-i40e-rtnl_lock-in-reset-path-fixes.patch
 
 	########################################################
 	# Wireless Networking
