i40e/igb: Convert to dev_consume_skb_any() (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15763,6 +15763,7 @@
 	patches.drivers/i40e-0470-i40e-fix-panic-due-to-too-early-Tx-queue-enable.patch
 	patches.drivers/i40e-0471-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 	patches.drivers/i40e-0472-i40e-use-global-pci_vfs_assigned-to-replace-local-i4.patch
+	patches.drivers/i40e-0473-i40e-igb-Convert-to-dev_consume_skb_any.patch
 
 	########################################################
 	# Wireless Networking
