i40e: Add ablitity to enable/disable link from set_link_restart_an (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15676,6 +15676,7 @@
 	patches.drivers/i40e-0383-i40e-fix-a-stray-print-message.patch
 	patches.drivers/i40e-0384-i40e-Fix-ethtool-coalesce-settings.patch
 	patches.drivers/i40e-0385-i40e-i40evf-remove-reserved-type.patch
+	patches.drivers/i40e-0386-i40e-Add-ablitity-to-enable-disable-link-from-set_li.patch
 
 	########################################################
 	# Wireless Networking
