i40e: rename i40e_ptp_enable to i40e_ptp_feature_enable (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15684,6 +15684,7 @@
 	patches.drivers/i40e-0391-i40e-Bypass-timeout-recovery-level-0-so-as-to-not-ca.patch
 	patches.drivers/i40e-0392-i40e-do-not-take-NVM-ownership-for-SR-read.patch
 	patches.drivers/i40e-0393-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
+	patches.drivers/i40e-0394-i40e-rename-i40e_ptp_enable-to-i40e_ptp_feature_enab.patch
 
 	########################################################
 	# Wireless Networking
