--- a/series.conf
+++ b/series.conf
@@ -15448,6 +15448,7 @@
 	patches.drivers/i40e-0155-i40e-correctly-setup-ARQ-descriptors.patch
 	patches.drivers/i40e-0156-i40e-Re-enable-interrupt-on-ICR0.patch
 	patches.drivers/i40e-0157-i40e-use-kernel-specific-defines.patch
+	patches.drivers/i40e-0158-i40e-Fix-GPL-header.patch
 
 	########################################################
 	# Wireless Networking
