--- a/series.conf
+++ b/series.conf
@@ -15737,6 +15737,7 @@
 	patches.drivers/i40e-0444-i40e-fix-sparse-non-static-symbol-warning.patch
 	patches.drivers/i40e-0445-i40e-use-correct-structure-type-name-in-sizeof.patch
 	patches.drivers/i40e-0446-i40e-Cleaning-up-missing-null-terminate-in-conjuncti.patch
+	patches.drivers/i40e-0447-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
