i40e: shorten wordy fields (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15456,6 +15456,7 @@
 	patches.drivers/i40e-0163-i40e-release-NVM-resource-reservation-on-startup.patch
 	patches.drivers/i40e-0164-i40e-remove-interrupt-on-AQ-error.patch
 	patches.drivers/i40e-0165-i40e-accept-pf-to-pf-adminq-messages.patch
+	patches.drivers/i40e-0166-i40e-shorten-wordy-fields.patch
 
 	########################################################
 	# Wireless Networking
