i40e: keep SR-IOV enabled in the case that RSS, VMDQ, FD_SB and DCB are disabled (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15643,6 +15643,7 @@
 	patches.drivers/i40e-0350-i40e-don-t-complain-about-removing-non-existent-addr.patch
 	patches.drivers/i40e-0351-i40e-implement-anti-spoofing-for-VFs.patch
 	patches.drivers/i40e-0352-i40e-Changes-to-Interrupt-distribution-policy.patch
+	patches.drivers/i40e-0353-i40e-keep-SR-IOV-enabled-in-the-case-that-RSS-VMDQ-F.patch
 
 	########################################################
 	# Wireless Networking
