--- a/series.conf
+++ b/series.conf
@@ -15474,6 +15474,7 @@
 	patches.drivers/i40e-0181-i40e-call-clear_pxe-after-adminq-is-initialized.patch
 	patches.drivers/i40e-0182-i40e-enable-PTP.patch
 	patches.drivers/i40e-0183-i40e-remove-linux-export.h-header-from-i40e_ptp.c.patch
+	patches.drivers/i40e-0184-i40e-fix-log-message-wording.patch
 
 	########################################################
 	# Wireless Networking
