--- a/series.conf
+++ b/series.conf
@@ -15297,6 +15297,7 @@
 	patches.drivers/i40e-0004-i40e-driver-core-headers.patch
 	patches.drivers/i40e-0005-i40e-implement-virtual-device-interface.patch
 	patches.drivers/i40e-0006-i40e-init-code-and-hardware-support.patch
+	patches.drivers/i40e-0007-i40e-debugfs-interface.patch
 
 	########################################################
 	# Wireless Networking
