i40e: Fix static checker warning (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15512,6 +15512,7 @@
 	patches.drivers/i40e-0219-i40e-Remove-a-FW-workaround-for-Number-of-MSIX-vecto.patch
 	patches.drivers/i40e-0220-i40e-count-timeout-events.patch
 	patches.drivers/i40e-0221-i40e-Remove-a-redundant-filter-addition.patch
+	patches.drivers/i40e-0222-i40e-Fix-static-checker-warning.patch
 
 	########################################################
 	# Wireless Networking
