i40e: Correct mask assignment value (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15695,6 +15695,7 @@
 	patches.drivers/i40e-0402-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 	patches.drivers/i40e-0403-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 	patches.drivers/i40e-0404-i40e-clear-all-queues-and-interrupts.patch
+	patches.drivers/i40e-0405-i40e-Correct-mask-assignment-value.patch
 
 	########################################################
 	# Wireless Networking
