i40e: add num_VFs message (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15358,6 +15358,7 @@
 	patches.drivers/i40e-0065-i40e-only-set-up-the-rings-to-be-used.patch
 	patches.drivers/i40e-0066-i40e-clear-test-state-bit-after-all-ethtool-tests.patch
 	patches.drivers/i40e-0067-i40e-refactor-ethtool-tests.patch
+	patches.drivers/i40e-0068-i40e-add-num_VFs-message.patch
 
 	########################################################
 	# Wireless Networking
