i40e: add header file flag _I40E_TXRX_H_ (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15408,6 +15408,7 @@
 	patches.drivers/i40e-0115-i40e-Change-the-ethtool-NVM-read-method-to-use-AQ.patch
 	patches.drivers/i40e-0116-i40e-fix-constant-cast-issues.patch
 	patches.drivers/i40e-0117-i40e-guard-against-vf-message-races.patch
+	patches.drivers/i40e-0118-i40e-add-header-file-flag-_I40E_TXRX_H_.patch
 
 	########################################################
 	# Wireless Networking
