i40e: move nway reset (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15707,6 +15707,7 @@
 	patches.drivers/i40e-0414-i40e-disable-TPH.patch
 	patches.drivers/i40e-0415-i40e-Finish-implementation-of-ethtool-get-settings.patch
 	patches.drivers/i40e-0416-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
+	patches.drivers/i40e-0417-i40e-move-nway-reset.patch
 
 	########################################################
 	# Wireless Networking
