--- a/series.conf
+++ b/series.conf
@@ -15544,6 +15544,7 @@
 	patches.drivers/i40e-0251-i40e-Make-the-alloc-and-free-queue-vector-calls-orth.patch
 	patches.drivers/i40e-0252-i40e-eeprom-integrity-check-on-load-and-empr.patch
 	patches.drivers/i40e-0253-i40e-Cleanup-in-FDIR-SB-ethtool-code.patch
+	patches.drivers/i40e-0254-i40e-Add-functionality-for-FD-SB-to-drop-packets.patch
 
 	########################################################
 	# Wireless Networking
