i40e: remove extra register write (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15475,6 +15475,7 @@
 	patches.drivers/i40e-0182-i40e-enable-PTP.patch
 	patches.drivers/i40e-0183-i40e-remove-linux-export.h-header-from-i40e_ptp.c.patch
 	patches.drivers/i40e-0184-i40e-fix-log-message-wording.patch
+	patches.drivers/i40e-0185-i40e-remove-extra-register-write.patch
 
 	########################################################
 	# Wireless Networking
