i40e: Add basic support for get/set channels for RSS (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15373,6 +15373,7 @@
 	patches.drivers/i40e-0080-i40e-use-same-number-of-queues-as-CPUs.patch
 	patches.drivers/i40e-0081-i40e-reinit-flow-for-the-main-VSI.patch
 	patches.drivers/i40e-0082-i40e-function-to-reconfigure-RSS-queues-and-rebuild.patch
+	patches.drivers/i40e-0083-i40e-Add-basic-support-for-get-set-channels-for-RSS.patch
 
 	########################################################
 	# Wireless Networking
