i40e: Fix function comments (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15521,6 +15521,7 @@
 	patches.drivers/i40e-0228-i40e-make-string-references-to-q-be-queue.patch
 	patches.drivers/i40e-0229-i40e-cleanup-strings.patch
 	patches.drivers/i40e-0230-i40e-simplified-init-string.patch
+	patches.drivers/i40e-0231-i40e-Fix-function-comments.patch
 
 	########################################################
 	# Wireless Networking
