--- a/series.conf
+++ b/series.conf
@@ -15600,6 +15600,7 @@
 	patches.drivers/i40e-0307-i40e-Report-cmd-data-in-ETHTOOL_GRXCLSRLCNT-instead-.patch
 	patches.drivers/i40e-0308-i40e-Use-the-new-i40e_get_fd_cnt_all-function-in-oth.patch
 	patches.drivers/i40e-0309-i40e-i40evf-remove-storm-control.patch
+	patches.drivers/i40e-0310-i40e-i40evf-Change-type-to-u32-to-avoid-sparse-error.patch
 
 	########################################################
 	# Wireless Networking
