--- a/series.conf
+++ b/series.conf
@@ -15426,6 +15426,7 @@
 	patches.drivers/i40e-0133-i40e-don-t-allocate-zero-size.patch
 	patches.drivers/i40e-0134-i40e-acknowledge-VFLR-when-disabling-SR-IOV.patch
 	patches.drivers/i40e-0135-i40e-support-VFs-on-PFs-other-than-0.patch
+	patches.drivers/i40e-0136-i40e-Fix-VF-driver-MAC-address-configuration.patch
 
 	########################################################
 	# Wireless Networking
