--- a/series.conf
+++ b/series.conf
@@ -15463,6 +15463,7 @@
 	patches.drivers/i40e-0170-i40e-use-assignment-instead-of-memcpy.patch
 	patches.drivers/i40e-0171-i40e-drop-unused-macros.patch
 	patches.drivers/i40e-0172-i40e-Update-the-Current-NVM-version-Low-value.patch
+	patches.drivers/i40e-0173-i40e-fix-long-lines.patch
 
 	########################################################
 	# Wireless Networking
