--- a/series.conf
+++ b/series.conf
@@ -15518,6 +15518,7 @@
 	patches.drivers/i40e-0225-i40e-delete-netdev-after-deleting-napi-and-vectors.patch
 	patches.drivers/i40e-0226-i40e-Fix-a-bug-in-the-update-logic-for-FDIR-SB-filte.patch
 	patches.drivers/i40e-0227-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
+	patches.drivers/i40e-0228-i40e-make-string-references-to-q-be-queue.patch
 
 	########################################################
 	# Wireless Networking
