i40e: Cleanup if/else statements (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15568,6 +15568,7 @@
 	patches.drivers/i40e-0275-i40e-abstract-the-close-path-for-better-netdev-vsis.patch
 	patches.drivers/i40e-0276-i40e-use-generic-vsi_open-to-unquiesce-vsi.patch
 	patches.drivers/i40e-0277-i40e-rework-fdir-setup-and-teardown.patch
+	patches.drivers/i40e-0278-i40e-Cleanup-if-else-statements.patch
 
 	########################################################
 	# Wireless Networking
