i40e/i40evf: remove deprecated device IDs (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15636,6 +15636,7 @@
 	patches.drivers/i40e-0343-i40e-i40evf-remove-chatty-reset-messages.patch
 	patches.drivers/i40e-0344-i40e-i40evf-fix-TSO-accounting.patch
 	patches.drivers/i40e-0345-i40e-i40evf-fix-poll-weight.patch
+	patches.drivers/i40e-0346-i40e-i40evf-remove-deprecated-device-IDs.patch
 
 	########################################################
 	# Wireless Networking
