i40e: remove support for vf unicast promiscuous mode (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15732,6 +15732,7 @@
 	patches.drivers/i40e-0439-i40e-use-correct-vf_id-offset-for-virtchnl-message.patch
 	patches.drivers/i40e-0440-i40e-disable-local-loopback-on-vmdq-vsi.patch
 	patches.drivers/i40e-0441-i40e-Minor-comment-changes.patch
+	patches.drivers/i40e-0442-i40e-remove-support-for-vf-unicast-promiscuous-mode.patch
 
 	########################################################
 	# Wireless Networking
