i40e: avoid unnecessary register read (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15420,6 +15420,7 @@
 	patches.drivers/i40e-0127-i40e-remove-un-necessary-io-write.patch
 	patches.drivers/i40e-0128-i40e-Record-dma-buffer-info-for-dummy-packets.patch
 	patches.drivers/i40e-0129-i40e-Fix-SR-IOV-VF-port-VLAN.patch
+	patches.drivers/i40e-0130-i40e-avoid-unnecessary-register-read.patch
 
 	########################################################
 	# Wireless Networking
