i40e: fix passing wrong error code to i40e_open() (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15591,6 +15591,7 @@
 	patches.drivers/i40e-0298-i40e-Don-t-disable-SR-IOV-when-VFs-are-assigned.patch
 	patches.drivers/i40e-0299-i40e-remove-Tx-work-for-ptp.patch
 	patches.drivers/i40e-0300-i40e-Check-PCI_IOV-config-to-avoid-compile-error.patch
+	patches.drivers/i40e-0301-i40e-fix-passing-wrong-error-code-to-i40e_open.patch
 
 	########################################################
 	# Wireless Networking
