i40e: use correct structure type name in sizeof (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15735,6 +15735,7 @@
 	patches.drivers/i40e-0442-i40e-remove-support-for-vf-unicast-promiscuous-mode.patch
 	patches.drivers/i40e-0443-i40e-Fix-missing-uapi-linux-dcbnl.h-include-in-i40e_.patch
 	patches.drivers/i40e-0444-i40e-fix-sparse-non-static-symbol-warning.patch
+	patches.drivers/i40e-0445-i40e-use-correct-structure-type-name-in-sizeof.patch
 
 	########################################################
 	# Wireless Networking
