i40e: no pf reset at pci remove (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15680,6 +15680,7 @@
 	patches.drivers/i40e-0387-i40e-use-WoL-flag-when-setting-LAA.patch
 	patches.drivers/i40e-0388-i40e-allow-user-to-set-LAA-again.patch
 	patches.drivers/i40e-0389-i40e-reapply-LAA-after-reset.patch
+	patches.drivers/i40e-0390-i40e-no-pf-reset-at-pci-remove.patch
 
 	########################################################
 	# Wireless Networking
