i40e: Tell the stack about our actual number of queues (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15367,6 +15367,7 @@
 	patches.drivers/i40e-0074-i40e-fix-null-dereference.patch
 	patches.drivers/i40e-0075-i40e-fix-up-some-of-the-ethtool-connection-reporting.patch
 	patches.drivers/i40e-0076-i40e-fix-pf-reset-after-offline-test.patch
+	patches.drivers/i40e-0077-i40e-Tell-the-stack-about-our-actual-number-of-queue.patch
 
 	########################################################
 	# Wireless Networking
