i40e: convert ret to aq_ret (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15303,6 +15303,7 @@
 	patches.fixes/net-Add-support-for-hardware-offloaded-encapsulation.patch
 	patches.drivers/i40e-0011-i40e-use-common-failure-flow.patch
 	patches.drivers/i40e-0012-i40e-small-clean-ups-from-review.patch
+	patches.drivers/i40e-0013-i40e-convert-ret-to-aq_ret.patch
 
 	########################################################
 	# Wireless Networking
