i40e: remove hardcode of stats struct size in ethtool (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15587,6 +15587,7 @@
 	patches.drivers/i40e-0294-i40e-add-required-include.patch
 	patches.drivers/i40e-0295-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 	patches.drivers/i40e-0296-i40e-i40evf-control-auto-ITR-through-ethtool.patch
+	patches.drivers/i40e-0297-i40e-remove-hardcode-of-stats-struct-size-in-ethtool.patch
 
 	########################################################
 	# Wireless Networking
