i40e: remove redundant AQ enable (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15444,6 +15444,7 @@
 	patches.drivers/i40e-0151-i40e-rework-shadow-ram-read-functions.patch
 	patches.drivers/i40e-0152-i40e-whitespace-paren-and-comment-tweaks.patch
 	patches.drivers/i40e-0153-i40e-Enable-Disable-PF-switch-LB-on-SR-IOV-configure.patch
+	patches.drivers/i40e-0154-i40e-remove-redundant-AQ-enable.patch
 
 	########################################################
 	# Wireless Networking
