i40e: Update function formal parameters (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15581,6 +15581,7 @@
 	patches.drivers/i40e-0288-i40e-Change-variable-type-to-avoid-typecheck-failure.patch
 	patches.drivers/i40e-0289-i40e-Do-not-enable-NTUPLE-feature-control-in-MFP-mod.patch
 	patches.drivers/i40e-0290-i40e-Do-not-expose-fd-sb-commands-from-debugfs.patch
+	patches.drivers/i40e-0291-i40e-Update-function-formal-parameters.patch
 
 	########################################################
 	# Wireless Networking
