i40e: include i40e in kernel proper (bsc#909484 FATE#317397).
Update config files.
Add support Intel(R) Ethernet Controller XL710 Family support (I40E).

--- a/series.conf
+++ b/series.conf
@@ -15298,6 +15298,7 @@
 	patches.drivers/i40e-0005-i40e-implement-virtual-device-interface.patch
 	patches.drivers/i40e-0006-i40e-init-code-and-hardware-support.patch
 	patches.drivers/i40e-0007-i40e-debugfs-interface.patch
+	patches.drivers/i40e-0008-i40e-include-i40e-in-kernel-proper.patch
 
 	########################################################
 	# Wireless Networking
