i40e: Cleanup reconfig rss path (bsc#909484 FATE#317397).

--- a/series.conf
+++ b/series.conf
@@ -15452,6 +15452,7 @@
 	patches.drivers/i40e-0159-i40e-Fix-MAC-format-in-Write-MAC-address-AQ-cmd.patch
 	patches.drivers/i40e-0160-i40e-add-a-comment-on-barrier-and-fix-panic-on-reset.patch
 	patches.drivers/i40e-0161-i40e-disable-packet-split.patch
+	patches.drivers/i40e-0162-i40e-Cleanup-reconfig-rss-path.patch
 
 	########################################################
 	# Wireless Networking
